Fix scroll problem on mobile device

--- a/public/assets/css/animate.css
+++ b/public/assets/css/animate.css
@@ -8,9 +8,9 @@ Copyright (c) 2013 Daniel Eden
 */
 
 
-html, body {
+/*html, body {
 	overflow: hidden; 
-}
+}*/
 
 .animated {
   -webkit-animation-duration: 1.5s;
