--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -24,9 +24,10 @@ Tags: one-page, single-page, portfolio, custom-colors, post-formats, responsive,
 
 body {
     background-color: #2B2C30;
-	font-family: 'Ubuntu', 'Arial', sans-serif;
+		font-family: 'Ubuntu', 'Arial', sans-serif;
     line-height: 1.5;
     color: #ddd;
+		-webkit-overflow-scrolling: touch;
 }
 
 ol, ul {
